--- a/static/style/style.css
+++ b/static/style/style.css
@@ -139,8 +139,9 @@ body {
     margin: 20px auto 30px auto;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     font-family: 'Roboto';
+    column-gap: 17px;
 }
 
 .newAcc > p {
